added bower dependencies

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-   <link href="main.css">
-  <title>Document</title>
+    <title>Todo</title>
+    <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
+  <h1>Todo List</h1>
   
+<script type="test/javascript" src="lib/bower_components/jquery/dist/jquery.min.js"></script>
+<script type="test/javascript" src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
+<script type="text/javascript" src="app/app.js"></script>
 </body>
-<script src="app.js"></script>
 </html>
