--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
     <link rel="stylesheet" type="text/css" href="lib/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
-<body>
-  <h1>Todo List</h1>
-  
+<!-- Here is the app name:  -->
+<body ng-app="TodoApp">
+
+<!-- Bootstrap here:  -->
+<nav class="navbar navbar-default" ng-controller="NavCtrl">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">ToDoozy</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right" ng-repeat="thingy in navItems">
+         <li><a href="#">{{thingy.name}}</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<!-- Here is the controller name: -->
+    <div ng-controller="TodoCtrl">
+      <h1>Todo List</h1>
+    </div>
+
 <script type="test/javascript" src="lib/bower_components/jquery/dist/jquery.min.js"></script>
 <script type="test/javascript" src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
