created new files

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
                   </div>
               </div>
 
+<!-- {
+    id: 0,
+    task: "mow the lawn",
+    isCompleted: true,
+    dueDate: "12/5/17",
+    assignedTo: "greg",
+    location: "Zoe's house",
+    urgency: "low",
+    dependencies: "sunshine, clippers, hat, water, headphones"
+  }, -->
+
           </div>
           <div class="col-xs-12" ng-show="!showListView">
             <h1>New Todo</h1>
