--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
 <!-- Here is the controller name: -->
       <div class="row">
         <div class="col-xs-10 col-xs-offset-1 main-container">
+        <!-- this is where the content from the partials are inserted: -->
           <div class="col-xs-12" ng-view>            
                     </div>
                   </div>
               </div>
-
+<!-- Added files - libraries come first because they activate load: -->
 <script type="test/javascript" src="lib/bower_components/jquery/dist/jquery.min.js"></script>
 <script type="test/javascript" src="lib/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="lib/bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="lib/bower_components/angular-route/angular-route.min.js"></script>
+<!-- These are my files - apps first, then factories and controllers - because factories initialize info and controllers manipulate: -->
 <script type="text/javascript" src="app/app.js"></script>
+<script type="text/javascript" src="app/factory/itemfactory.js"></script>
 <script type="text/javascript" src="app/controllers/NavCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/ItemListCtrl.js"></script>
 <script type="text/javascript" src="app/controllers/ItemNewCtrl.js"></script>
